--- a/ps5_template.qmd
+++ b/ps5_template.qmd
@@ -54,6 +54,9 @@ from bs4 import BeautifulSoup
 
 from datetime import datetime
 from urllib.parse import urljoin
+import geopandas as gpd
+import matplotlib.pyplot as plt
+from shapely import wkt
 ```
 
 
@@ -253,14 +256,13 @@ def ScrapeEnforcement(month, year):
 
 ```{python}
 # collecting the enforcement actions since January 2023
-ScrapeEnforcement(1, 2023)
+df_2023 = ScrapeEnforcement(1, 2023)
 ```
 
 ```{python}
-df_enforcement = pd.read_csv("enforcement_actions_year_month.csv") #DELETE IT
-print(len(df_enforcement), 'enforcement actions in final dataframe')
+print(len(df), 'enforcement actions since January 2023')
 
-earlist_enforcement = df_enforcement.iloc[-1]
+earlist_enforcement = df_2023.iloc[-1]
 print('The date and details of the earliest enforcement action it scraped is',earlist_enforcement)
 ```
 
@@ -268,13 +270,13 @@ print('The date and details of the earliest enforcement action it scraped is',ea
 
 ```{python}
 # collecting the enforcement actions since January 2021
-ScrapeEnforcement(1, 2021)
+df_2021 = ScrapeEnforcement(1, 2021)
 ```
 
 ```{python}
-print(len(df_enforcement), 'enforcement actions in final dataframe')
+print(len(df_2021), 'enforcement actions since January 2021')
 
-earlist_enforcement = df_enforcement.iloc[-1]
+earlist_enforcement = df_2021.iloc[-1]
 print('The date and details of the earliest enforcement action it scraped is',earlist_enforcement)
 ```
 
@@ -283,6 +285,24 @@ print('The date and details of the earliest enforcement action it scraped is',ea
 ### 1. Plot the number of enforcement actions over time (PARTNER 2)
 
 ```{python}
+# extrac year month
+df_2021['Date'] = pd.to_datetime(df_2021['Date'])
+df_2021['yearmonth'] = df_2021['Date'].dt.strftime('%Y-%m')
+
+enforcement_counts = df_2021.groupby('yearmonth').size().reset_index(name='Count')
+
+# Convert YearMonth to a string format
+enforcement_counts['yearmonth'] = enforcement_counts['yearmonth'].astype(str)
+
+alt.Chart(enforcement_counts).mark_line().encode(
+    x='yearmonth(yearmonth):T',
+    y='Count:Q',
+    tooltip=['yearmonth', 'Count']
+).properties(
+    title='Number of Enforcement Actions Over Time (Monthly)',
+    width=600,
+    height=400
+)
 
 ```
 
@@ -291,13 +311,60 @@ print('The date and details of the earliest enforcement action it scraped is',ea
 * based on "Criminal and Civil Actions" vs. "State Enforcement Agencies"
 
 ```{python}
+# filter only two categories
+two_split = df_2021[df_2021['Category'].isin(["Criminal and Civil Actions", "State Enforcement Agencies"])]
+
+# NOT SURE
+two_split = two_split.groupby('Category').size().reset_index(name='Count')
+
+alt.Chart(two_split).mark_line().encode(
+    x='Category:O',
+    y='Count:Q'
+).properties(
+    title= '"Criminal and Civil Actions" vs. "State Enforcement Agencies"',
+    width=600,
+    height=400
+)
 
 ```
 
 * based on five topics
 
 ```{python}
+# filter only one category
+five_topics = df_2021[df_2021['Category'].isin(["Criminal and Civil Actions"])]
 
+topics = []
+
+for title in five_topics['Title']:
+  title = title.lower()  # Convert to lowercase for easy matching
+
+  # checking key words
+  if "health care" in title or "health" in title:
+    topics.append("Health Care Fraud")
+  elif "financial" in title or "bank" in title:
+    topics.append("Financial Fraud")
+  elif "drug" in title:
+    topics.append("Drug Enforcement")
+  elif "bribery" in title or "corruption" in title:
+    topics.append("Bribery/Corruption")
+  else:
+    topics.append("Other")
+
+# append topic column
+five_topics['topics'] = topics
+
+# NOT SURE
+five_topics = five_topics.groupby('topics').size().reset_index(name='Count')
+
+alt.Chart(five_topics).mark_line().encode(
+    x='topics:O',
+    y='Count:Q'
+).properties(
+    title= 'Five Topics',
+    width=600,
+    height=400
+)
 ```
 
 ## Step 4: Create maps of enforcement activity
@@ -305,14 +372,55 @@ print('The date and details of the earliest enforcement action it scraped is',ea
 ### 1. Map by State (PARTNER 1)
 
 ```{python}
+# filter states
+states_count = df_2021[df_2021['Agency'].str.contains("State of", case=False, na=False)]
+len(df_2021)
+# clean the state names
+# Attribution: I ask ChatGPT how to extract district name
+states_count['NAME'] = states_count['Agency'].str.extract(r"State of (.+)", expand=False)
 
+# group by state
+states_count = states_count.groupby('NAME').size().reset_index(name='Count')
+```
+
+```{python}
+states_map = gpd.read_file('cb_2018_us_state_500k.shp')
+
+# merge them with the shapefile
+states = states_map.merge(states_count, left_on = 'NAME', right_on = 'NAME', how = 'left')
+
+# plot a choropleth of the number of enforcement actions for each state
+states.plot(column = "Count", legend = True).set_axis_off()
 ```
 
 
 ### 2. Map by District (PARTNER 2)
 
 ```{python}
+# filter districts
+districts_count = df_2021[df_2021['Agency'].str.contains("District", case=False, na=False)]
 
+# clean the district names
+# Attribution: I ask ChatGPT how to extract district name
+districts_count['Judicial District'] = districts_count['Agency'].str.extract(r",\s*(.*District of .*)")
+
+# group by districts
+districts_count = districts_count.groupby('Judicial District').size().reset_index(name='Count')
+districts_count
+```
+
+```{python}
+districts_map = gpd.read_file('US_Attorney_Districts_Shapefile_simplified_20241107.csv')
+
+# Convert csv to geometry
+districts_map['the_geom'] = districts_map['the_geom'].apply(wkt.loads)
+districts_map = gpd.GeoDataFrame(districts_map, geometry='the_geom')
+
+# merge them with the shapefile
+districts = districts_map.merge(districts_count, left_on = 'Judicial District', right_on = 'Judicial District', how = 'left')
+
+# plot a choropleth of the number of enforcement actions in each US Attorney District
+districts.plot(column = "Count", legend = True).set_axis_off()
 ```
 
 ## Extra Credit
