--- a/ps5_template.qmd
+++ b/ps5_template.qmd
@@ -30,8 +30,8 @@ output:
     - Partner 2 (name and cnet ID): Dale (Yuanhao) Jin; jin86
 3. Partner 1 will accept the `ps5` and then share the link it creates with their partner. You can only share it with one partner so you will not be able to change it after your partner has accepted. 
 4. "This submission is our work alone and complies with the 30538 integrity policy." Add your initials to indicate your agreement: \*\* YZ\*\* \*\* Dale Jin\*\*
-5. "I have uploaded the names of anyone else other than my partner and I worked with on the problem set **[No](https://docs.google.com/forms/d/185usrCREQaUbvAXpWhChkjghdGgmAZXA3lPWpXLLsts/edit)**"  (1 point)
-6. Late coins used this pset: \*\* 1 \*\* Late coins left after submission: \*\* 1 \*\*
+5. "I have uploaded the names of anyone else other than my partner and I worked with on the problem set **[Yuqing Wen](https://docs.google.com/forms/d/185usrCREQaUbvAXpWhChkjghdGgmAZXA3lPWpXLLsts/edit)**"  (1 point)
+6. Late coins used this pset: \*\* 0 \*\* Late coins left after submission: \*\* 2 \*\*
 7. Knit your `ps5.qmd` to an PDF file to make `ps5.pdf`, 
     * The PDF should not be more than 25 pages. Use `head()` and re-size figures when appropriate. 
 8. (Partner 1): push  `ps5.qmd` and `ps5.pdf` to your github repo.
