--- a/ps5_template.qmd
+++ b/ps5_template.qmd
@@ -388,8 +388,19 @@ states_map = gpd.read_file('cb_2018_us_state_500k.shp')
 # merge them with the shapefile
 states = states_map.merge(states_count, left_on = 'NAME', right_on = 'NAME', how = 'left')
 
+# replace NA value
+states['Count'] = states['Count'].fillna(0)
+
 # plot a choropleth of the number of enforcement actions for each state
-states.plot(column = "Count", legend = True).set_axis_off()
+alt.Chart(states).mark_geoshape().encode(
+  alt.Color('Count:Q')
+).project(
+  type = 'albersUsa'
+).properties(
+  width = 600,
+  height = 500,
+  title = 'Number of Enforcement Actions (by States)'
+)
 ```
 
 
@@ -418,8 +429,19 @@ districts_map = gpd.GeoDataFrame(districts_map, geometry = 'the_geom')
 # merge them with the shapefile
 districts = districts_map.merge(districts_count, left_on = 'Judicial District', right_on = 'Judicial District', how = 'left')
 
+# replace NA value
+districts['Count'] = districts['Count'].fillna(0)
+
 # plot a choropleth of the number of enforcement actions in each US Attorney District
-districts.plot(column = "Count", legend = True).set_axis_off()
+alt.Chart(districts).mark_geoshape().encode(
+  alt.Color('Count:Q')
+).project(
+  type = 'albersUsa'
+).properties(
+  width = 600,
+  height = 500,
+  title = 'Number of Enforcement Actions (by District)'
+)
 ```
 
 ## Extra Credit
